# 2048

./: .gitignore  CMakeLists.txt  README.md
include/: game2048.h
src/: game2048.cpp  main.cpp
